- Fixed a potential crash after <kbd>Enter</kbd>, due to Readline ending a prompt with inconsistent state left over.
- Fixed [#786](https://github.com/chrisant996/clink/issues/786); `clink autorun` claims the "AutoRun" reg key has a "current user" WOW64 key, but there's no such thing.
- Minor improvement to error handling for certain failures in oh-my-posh.

#### v1.7.22

- Explicitly disable `loadlib` and related support in Lua; Clink uses a statically linked Lua engine and does not support dynamic C libraries.
- Fixed the `onprovideline` event so it doesn't interfere with the `same_dir` mode of `prompt.transient`.
- Fixed input line coloring of `echo` in `for %i (1 2 3) do @echo %i` (regression introduced in v1.6.16).
- Fixed how `clink autorun set` parses flags and quotes, so that `clink autorun set \"c:\my tools\clink\" inject --autorun` works as expected.
- Fixed the `exec.commands` setting when an argmatcher uses `:chaincommand()`.
- Fixed edge cases for `@` command prefix when an argmatcher uses `:chaincommand()`.
- Fixed [#779](https://github.com/chrisant996/clink/issues/779); an argmatcher's `onadvance` callback accidentally advanced two times if it advanced to the last argument slot.
- Fixed [#782](https://github.com/chrisant996/clink/issues/782); on Windows 8.1, some multiline prompts may render with extra blank lines.

#### v1.7.21

- Fixed <kbd>Tab</kbd> expansion of `foo ~` when there is no argmatcher for `foo`.
- Fixed [#772](https://github.com/chrisant996/clink/issues/772); uninstall fails to uninstall autorun if the logged on user is not an administrator.
- Fixed [#773](https://github.com/chrisant996/clink/issues/773); unexpected completion behavior after a doskey alias command.

#### v1.7.20

- Fixed [#763](https://github.com/chrisant996/clink/issues/763); transient prompt has blank line after it if the input line is the width of the terminal (regression introduced in v1.7.0).